cmake_minimum_required(VERSION 3.16)
project(C___Primer)

set(CMAKE_CXX_STANDARD 11)

add_executable(C___Primer main.cpp)
add_executable(1.22 1/122.cc)
add_executable(2.8 2/2.8.cpp)
add_executable(2.18 2/2.18.cpp)
add_executable(2.34 2/2.34.cpp)
add_executable(2.35 2/2.35.cpp)
add_executable(2.39 2/2.39.cpp)
add_executable(2.41-1.20 2/2.41-1.20.cpp)
add_executable(2.41-1.21 2/2.41-1.21.cpp)
add_executable(2.41-1.22 2/2.41-1.22.cpp)
add_executable(2.41-1.23 2/2.41-1.23.cpp)
add_executable(2.41-1.25 2/2.41-1.25.cpp)
add_executable(2.42-1.20 2/2.42-1.20.cpp)
add_executable(2.42-1.21 2/2.42-1.21.cpp)
add_executable(2.42-1.22 2/2.42-1.22.cpp)
add_executable(2.42-1.23 2/2.42-1.23.cpp)
add_executable(2.42-1.25 2/2.42-1.25.cpp)